<resources>
    <string name="app_name">MPTI</string>
    <string name="main_title">당신의 페르소나에 대해\n알아보는 시간</string>
    <string name="result_title">당신의 페르소나는...</string>

    <string name="friendship_q01">오랜만에 친구들과 만나기로 했다.\n카페에 가서 수다를 떨자는 친구의 말에\n당신의 대답은?</string>
    <string name="friendship_q02">‘사과’ 를 생각했을 때 연상되는 이미지는?</string>
    <string name="friendship_q03">기말고사 성적이 나온 후 친구가\n“넌 노력에 비해 성적이 진짜 잘 나온다.\n머리가 좋은가봐 부럽다~^^” 라고 한다.\n당신의 생각은?</string>
    <string name="friendship_q04">새내기로서 첫 대학수업을 마치고 과방에\n들어가려는데 이미 안에서는 화기애애한\n소리들이 들려온다. 이때 당신의 행동은?</string>
    <string name="friendship_q05">함께 연애의 참견을 보던 친구가\n만약에 저런 상황이 당신에게 생긴다면\n어떻게 대처할 것인지를 물어본다.\n당신의 대답은?</string>
    <string name="friendship_q06">친구들과 함께 여행을 가기로 했다.\n장소와 숙소만 정한 채, 여행 디데이\n3일전인데도 단톡방이 조용하다.\n이때 드는 생각은?</string>
    <string name="friendship_q07">친구와 함께 맛집에 가기로 했다.\n예쁘게 꾸미고 나왔는데, 하필 오늘\n식당이 문을 닫았다. 당신의 대처는?</string>
    <string name="friendship_q08">신입생 환영회 다음날, 어제 술을 마시며\n친해졌던 친구와 강의실 옆자리에\n앉게 되었다. 당신의 행동은?</string>
    <string name="friendship_q09">친한 친구가 우울해서 화분을 샀다고 한다.\n당신의 대답은?</string>
    <string name="friendship_q10">친구가 저녁약속에 커다란 선글라스를\n쓰고 나타났다. 이때 드는 생각은?</string>
    <string name="friendship_q11">시험에 떨어진 친구가 우울하다며 나에게\n전화를 걸어왔다. 이때 당신의 대답은?</string>
    <string name="friendship_q12">대학진학 후 원래 살던 곳과 거리가 멀어\n자취를 하게 되었다. 새로운 환경에서\n당신의 태도는?</string>

    <string name="friendship_01A">“3개 중에 어디가 제일 좋아?”\n미리 검색해 둔 카페리스트를 보낸다.</string>
    <string name="friendship_01B">“좋아, 그럼 그때 보자!”\n약속장소에 가서 정해도 늦지않다!</string>
    <string name="friendship_02A">백설공주? 근데 어떻게 생긴 사과일까?</string>
    <string name="friendship_02B">빨갛고 동그랗다!</string>
    <string name="friendship_03A">최고효율을 자랑하는 나의 머리가 자랑스럽다.</string>
    <string name="friendship_03B">나도 노력한건데 그걸 몰라주다니.. 서운하다!</string>
    <string name="friendship_04A">사람들의 시선이 부담스럽다ㅠ,\n오늘 과방은 포기하고 근처 카페로 향한다.</string>
    <string name="friendship_04B">앗 무언가 재밌는 순간을 놓친 것 같다,\n얼른 문을 열고 들어가 사람들과 어울린다.</string>
    <string name="friendship_05A">“바람피는 현장을 들킨거야 아니면..”\n상황을 머릿속에 그려보며 상상하고 대답한다.</string>
    <string name="friendship_05B">“일어나지도 않은 상황을 왜 물어보는거야..”\n발생하지도 않은 상황이 너무 멀게만 느껴진다.</string>
    <string name="friendship_06A">구체적인 계획이 없는점이 불안하다.</string>
    <string name="friendship_06B">“경주가면 황남빵 사와야지!”\n일단 가기만 하면 충분히 재밌게 놀 수 있다.</string>
    <string name="friendship_07A">주변에 있는 맛집을 재검색해본다.</string>
    <string name="friendship_07B">옆에 있는 다른 식당들 중\n제일 맛있어 보이는 곳에 간다.</string>
    <string name="friendship_08A">“…”\n열심히 교수님을 보며 수업에 집중한다.</string>
    <string name="friendship_08B">“어제 잘 들어갔어? 속은 좀 어때?”\n수업시간동안 친해져 같이 학식먹으러 간다.</string>
    <string name="friendship_09A">“우울한데 왜 화분을 샀어?”\n화분과 우울함의 상관관계가 궁금하다.</string>
    <string name="friendship_09B">“우울해?ㅠ 무슨 일 있었던거야?”\n친구의 우울함이 걱정된다.</string>
    <string name="friendship_10A">‘쌍커풀 수술했나? 누구한테 맞기라도 한건가..?’\n혼자 온갖 상상의 나래를 펼친다.</string>
    <string name="friendship_10B">‘어두울텐데 어디 부딪히기라도 하면..’\n밤에 선글라스를 쓰는 건 위험하다.</string>
    <string name="friendship_11A">“무슨 시험인데? 커트라인이 몇 점이야?”</string>
    <string name="friendship_11B">“속상하겠다. 걱정하지마,\n다음 번 시험엔 꼭 합격할거야!”</string>
    <string name="friendship_12A">일주일에 한번이상 고향친구와\n통화하며 외로움을 달랜다.</string>
    <string name="friendship_12B">새로운 곳에 왔으니,\n새로운 친구를 얼른 사귀어 나가 논다.</string>

    <string name="love_q01">연인과 제주도에 여행을 가기로 한 당신,\n맛집을 고르는 방식은 무엇인가?</string>
    <string name="love_q02">연인과 영화관에 가서 영화를 보고\n나오는 길, 영화에 대한 당신의 소감은?</string>
    <string name="love_q03">연인이 갑자기 배가 아프다고 한다.\n이때 당신의 대답은?</string>
    <string name="love_q04">연인과 트러블이 생겼을 때,\n당신의 반응은?</string>
    <string name="love_q05">연인에게 가장 좋아하는 노래를 설명한다.\n어떻게 설명할 것인가?</string>
    <string name="love_q06">애써 찾아간 소문난 맛집이 그날 휴무였다.\n당신의 반응은?</string>
    <string name="love_q07">오늘은 연인의 이삿날,\n도와주러 간 당신이 가장 처음 할 일은?</string>
    <string name="love_q08">연인의 친구를 처음 소개받는 날이다.\n만나러 가는 길에 당신의 심정은?</string>
    <string name="love_q09">당신이 차 사고가 나서 연인에게\n전화했다. 전화한 이유는?</string>
    <string name="love_q10">썸타는 사이에서 당신의 카톡을 확인한 후\n5분간 답장이 없다. 당신의 반응은?</string>
    <string name="love_q11">시험에 떨어진 연인이 우울하다며 나에게\n전화를 걸어왔다. 이때 당신의 대답은?</string>
    <string name="love_q12">새로 간 동아리에서 마음에 드는\n사람을 만났다. 당신의 행동은?</string>

    <string name="love_01A">여행 일정표를 확인한 후, 다음 계획장소와\n가까운 곳들 중 평점이 좋은 곳을 고른다.</string>
    <string name="love_01B">‘제주도 맛집’ 키워드를 검색한 후,\n평점이 좋은 곳을 고른다.</string>
    <string name="love_02A">“2030년이면 시간이동 할 수도 있을 것 같아..”,\n영화의 틀에 집중해 이야기한다.</string>
    <string name="love_02B">“주인공의 삶이 정말 드라마틱하더라 나라면..”,\n인물이나 영화의 스토리에 집중해 이야기한다.</string>
    <string name="love_03A">“점심에 뭐 먹었어? 어떻게 아픈데?”</string>
    <string name="love_03B">“괜찮아? 아파서 어떡해..”</string>
    <string name="love_04A">말하기전, 우선 생각정리 할 시간이 필요하다.</string>
    <string name="love_04B">자신이 느끼는 감정을 먼저 공유한다.</string>
    <string name="love_05A">“이 노래 가사가 참 공감가더라고..”</string>
    <string name="love_05B">“이거 힙합인데, 싱잉랩이어서\n멜로디가 너무 좋아!”</string>
    <string name="love_06A">“말도 안돼.. 분점이 있나 찾아봐야겠다.”</string>
    <string name="love_06B">“어! 저기도 맛있어 보이는데\n그냥 저기로 가자!”</string>
    <string name="love_07A">가장 먼저 어떤 짐을 싸야 할 지\n우선순위를 정한다.</string>
    <string name="love_07B">연인을 배려하여 가장 앞에 있는\n무거운 짐을 들어준다.</string>
    <string name="love_08A">긴장이 되어 미리 질문할 거리를 생각해 놓는다.</string>
    <string name="love_08B">연인의 친구를 처음 보게 되어 신난다.</string>
    <string name="love_09A">연락이 안될 수 있다는 것을 알려주기 위해.</string>
    <string name="love_09B">걱정해줬으면 하는 마음에.</string>
    <string name="love_10A">내가 잘못말했나? 마음에 안드나?\n혹시 무슨일이 있나? 온갖 추측을 해본다.</string>
    <string name="love_10B">뭐지.. 내가 뭘 잘못 말했나..\n걱정은하나 답장이 오기전에\n지나치게 추측하진 않는다.</string>
    <string name="love_11A">“무슨 시험인데? 어떤걸 놓친 것 같아?\n내가 도와줄게”</string>
    <string name="love_11B">“속상하겠다. 걱정하지마,\n다음 번 시험엔 꼭 합격할거야!”</string>
    <string name="love_12A">속으로 생각만하고, 상대방과의\n대화의 기회를 기다린다.</string>
    <string name="love_12B">상대방과의 대화의 기회를 만들고,\n동아리 행사에 적극적으로 참여한다.</string>

    <string name="work_q01">교양수업에서 이데아론에 대한 팀플과제를\n받은 당신, 첫 회의에서 가장 먼저\n논의해야하는 것은 무엇인가?</string>
    <string name="work_q02">프로젝트 기간, 밤샘 업무까지 해야할한큼\n업무량이 많다. 멍을 때리며 달콤한 상상에\n빠지는데.. 이때 하는 상상은?</string>
    <string name="work_q03">친한 동기가 상사에게 혼난 일을 당신에게\n터놓았다. 이때 당신의 대답은?</string>
    <string name="work_q04">새로 들어온 후임의 멘토를 당신이\n맡게 됐다. 당신의 심정은?</string>
    <string name="work_q05">선임이 처음 해보는 업무를 주었다.\n처음 드는 생각은?</string>
    <string name="work_q06">처음 해보는 업무를 대할 때\n당신이 처음 하는 행동은?</string>
    <string name="work_q07">지방출장을 가는 기차 속에서\n당신이 하는 생각은?</string>
    <string name="work_q08">지방출장 가는 길, 미팅에 늦을까\n급한 마음에 낯선 장소에서 길을 잃었다.\n이때 당신의 대처는?</string>
    <string name="work_q09">당신이 선임에게 듣고 싶은 피드백 유형은?</string>
    <string name="work_q10">선임이 잠시 회의실에서 할말이 있다고\n한다. 이때 드는 생각은?</string>
    <string name="work_q11">선임이 까칠한 말투로 “이거 이렇게\n하면 안돼, 내가 말한 방식대로 해줘”라고\n하였다. 당신의 반응은?</string>
    <string name="work_q12">새로 입사한 팀원과 같이 점심을\n먹기로 하였다. 당신의 심정은?</string>

    <string name="work_01A">이데아론을 어떠한 관점으로 다룰지\n주제를 먼저 정하고, 자료조사에 들어간다.</string>
    <string name="work_01B">이데아론에 대한 자료조사를 먼저 한 후,\n방향성에 대해 정해야한다.</string>
    <string name="work_02A">‘만약 프로젝트 시작 일주일전으로 돌아간다면\n미리 자료조사를 좀 해둘텐데..’</string>
    <string name="work_02B">‘갑자기 프로젝트가 중단된다면\n집에 가서 좀 쉴텐데..’</string>
    <string name="work_03A">“그 업무는 나중에 이렇게 하면 앞으로\n혼날 일 없을거야. 내가 알려줄게.”</string>
    <string name="work_03B">“속상하겠다. 나같으면 너처럼 담담하지 못했을거야.”</string>
    <string name="work_04A">부담스럽다..\n어떻게 말을 붙여야할지 고민된다.</string>
    <string name="work_04B">드디어 내게도 멘티가\n생겼다는 사실에 기대된다.</string>
    <string name="work_05A">‘이 업무는 무엇을 위해 하는 것일까?’\n목적에 대해 생각해본다.</string>
    <string name="work_05B">업무를 어디서부터 어떻게 시작할지 생각한다.</string>
    <string name="work_06A">새로운 업무와 기존의 업무들 간의\n우선수위를 결정하여 계획을 짠다.</string>
    <string name="work_06B">우선 이 일부터 끝내기 위해,\n바로 돌입한다.</string>
    <string name="work_07A">‘기차가 연착될 경우에\n가장 빠른 교통수단이 뭐지..?’</string>
    <string name="work_07B">‘늦으면 택시타면 되지 뭐!’</string>
    <string name="work_08A">네이버, 구글 총동원하여\n최대한 스스로 힘으로 길을 찾아본다.</string>
    <string name="work_08B">길을 잘 알고 있을 것 같은 사람에게 직접\n물어본다. 역시 직접 물어보는게 최고다!</string>
    <string name="work_09A">“전체적으로 괜찮지만,\n이 부분은 ~게 수정하면 더 좋겠다.”</string>
    <string name="work_09B">“열심히 했네, 고생했어!”</string>
    <string name="work_10A">내가 무엇을 잘못했나? 혹시 무슨일이 있나?\n온갖 추측을 해본다.</string>
    <string name="work_10B">뭐지.. 내가 뭘 잘못했나..\n걱정은하나 답장이 지나치게 추측하진 않는다.</string>
    <string name="work_11A">말투가 기분이 썩 좋진 않지만,\n업무적인 것이기 때문에 피드백에 집중한다.</string>
    <string name="work_11B">피드백도 좋지만 굳이 말투를 까칠하게\n해야 하는지 생각하면 괜히 기분이 나쁘다.</string>
    <string name="work_12A">괜히 약속을 잡았나 싶고, 무슨 말을 해야할지\n속으로 미리 생각해 놓는다.</string>
    <string name="work_12B">새로 입사한 팀원이 나와\n잘 맞았으면 좋겠다 생각한다.</string>

    <string name="yes">YES</string>
    <string name="no">NO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>